Update FishBag.java
used version with small changes to kungfury's that was compiling.