@@ -1,5 +1,6 @@
 package com.kunfury.blepfishing.objects.equipment;
 
+
 import com.kunfury.blepfishing.config.ConfigHandler;
 import com.kunfury.blepfishing.database.Database;
 import com.kunfury.blepfishing.helpers.Formatting;
@@ -24,7 +25,6 @@ import org.bukkit.persistence.PersistentDataType;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.util.*;
-import java.util.stream.Collectors;
 
 public class FishBag {
     public final int Id;
@@ -39,6 +39,7 @@ public class FishBag {
         amount = 0;
         tier = 1;
         Pickup = true;
+
         Id = Database.FishBags.Add(this);
     }
 
@@ -46,6 +47,8 @@ public class FishBag {
         Id = rs.getInt("id");
         tier = rs.getInt("tier");
         Pickup = rs.getBoolean("pickup");
+
+        //Bukkit.broadcastMessage("Requesting Update From ResultSet Instantiating");
         RequestUpdate();
     }
 
@@ -55,16 +58,20 @@ public class FishBag {
         p.playSound(p.getLocation(), Sound.ITEM_ARMOR_EQUIP_LEATHER, .3f, 1f);
     }
 
+
     public void UpdateBagItem(){
         if(bagItem == null){
             Utilities.Severe("Tried to update null bag item");
             return;
         }
 
+        //Bukkit.broadcastMessage("Updating Bag Item");
+
         ItemMeta m = bagItem.getItemMeta();
-        if(m == null) return;
+        assert m != null;
 
         m.setDisplayName(getBagName());
+
         m.setLore(GenerateLore());
         m.getPersistentDataContainer().set(ItemHandler.FishBagId, PersistentDataType.INTEGER, Id);
 
@@ -72,41 +79,42 @@ public class FishBag {
     }
 
     public String getBagName(){
-        switch(tier){
-            case 1: return Formatting.GetLanguageString("Equipment.Fish Bag.tier1Title");
-            case 2: return Formatting.GetLanguageString("Equipment.Fish Bag.tier2Title");
-            case 3: return Formatting.GetLanguageString("Equipment.Fish Bag.tier3Title");
-            case 4: return Formatting.GetLanguageString("Equipment.Fish Bag.tier4Title");
-            case 5: return Formatting.GetLanguageString("Equipment.Fish Bag.tier5Title");
-            default: return "Error Bag: " + tier;
-        }
+        return switch(tier){
+            case 1 -> Formatting.GetLanguageString("Equipment.Fish Bag.tier1Title");
+            case 2 -> Formatting.GetLanguageString("Equipment.Fish Bag.tier2Title");
+            case 3 -> Formatting.GetLanguageString("Equipment.Fish Bag.tier3Title");
+            case 4 -> Formatting.GetLanguageString("Equipment.Fish Bag.tier4Title");
+            case 5 -> Formatting.GetLanguageString("Equipment.Fish Bag.tier5Title");
+            default -> "Error Bag: " + tier;
+        };
     }
 
     public int getAmount(){ return amount; }
     public int getTier() { return tier; }
 
-    public void TogglePickup(ItemStack bag, Player player) {
+    public void TogglePickup(ItemStack bag, Player player){
         Pickup = !Pickup;
+
         Database.FishBags.Update(Id, "pickup", Pickup);
+
         player.playSound(player.getLocation(), Sound.ENTITY_EXPERIENCE_ORB_PICKUP, 1f, 1f);
 
-        ItemMeta meta = bag.getItemMeta();
-        if (meta == null) return;
-
-        meta.setUnbreakable(true);
-        if (Pickup) {
+        if(Pickup){
+            bag.addUnsafeEnchantment(Enchantment.DURABILITY, 1);
             player.sendMessage(Formatting.GetFormattedMessage("Equipment.Fish Bag.pickupEnabled"));
-        } else {
+        }else{
+            bag.removeEnchantment(Enchantment.DURABILITY);
             player.sendMessage(Formatting.GetFormattedMessage("Equipment.Fish Bag.pickupDisabled"));
         }
 
-        bag.setItemMeta(meta);
         player.getInventory().setItemInMainHand(bag);
     }
 
     public void FillFromInventory(Player player){
         int fillAmt = 0;
-        for(ItemStack item : player.getInventory().getStorageContents()){
+
+
+        for(var item : player.getInventory().getStorageContents()){
             if(getAmount() + fillAmt >= getMax()) break;
             if(item != null && item.getType() == ItemHandler.FishMat && ItemHandler.hasTag(item, ItemHandler.FishIdKey)){
                 if(Deposit(item, player))
@@ -117,7 +125,7 @@ public class FishBag {
         if(fillAmt > 0){
             player.sendMessage(Formatting.GetFormattedMessage("Equipment.Fish Bag.addFish")
                     .replace("{amount}", String.valueOf(fillAmt)));
-        } else {
+        }else{
             if(getAmount() >= getMax())
                 player.sendMessage(Formatting.GetFormattedMessage("Equipment.Fish Bag.noSpace"));
             else
@@ -128,67 +136,88 @@ public class FishBag {
     }
 
     public boolean Deposit(ItemStack item, Player player){
+
         if (ItemHandler.hasTag(item, ItemHandler.FishIdKey)) {
-            if(isFull()) return false;
+            if(isFull())
+                return false;
 
             FishObject fish = FishObject.GetCaughtFish(ItemHandler.getTagInt(item, ItemHandler.FishIdKey));
-            if(fish == null) return false;
-            
+            if(fish == null){
+                Bukkit.getLogger().warning("Null fish found");
+                return false;
+            }
             AddFish(fish);
+
             player.getInventory().remove(item);
             player.playSound(player.getLocation(), Sound.ENTITY_SALMON_FLOP, .25f, .25f);
             return true;
         }
+
         return TryUpgrade(item);
     }
 
-    Map<Integer, Material> upgradeMaterials = new HashMap<Integer, Material>() {{
-        put(1, Material.IRON_BLOCK);
-        put(2, Material.GOLD_BLOCK);
-        put(3, Material.DIAMOND_BLOCK);
-        put(4, Material.NETHERITE_BLOCK);
-    }};
+
+    Map<Integer, Material> upgradeMaterials = Map.of(
+            1, Material.IRON_BLOCK,
+            2, Material.GOLD_BLOCK,
+            3, Material.DIAMOND_BLOCK,
+            4, Material.NETHERITE_BLOCK
+    );
+
 
     private boolean TryUpgrade(ItemStack item){
-        if(!isFull()) return false;
+        if(!isFull())
+            return false;
 
-        boolean upgraded = false;
+
         switch (item.getType()){
-            case IRON_BLOCK:
-                if(tier == 1) { tier = 2; upgraded = true; }
-                break;
-            case GOLD_BLOCK:
-                if(tier == 2) { tier = 3; upgraded = true; }
-                break;
-            case DIAMOND_BLOCK:
-                if(tier == 3) { tier = 4; upgraded = true; }
-                break;
-            case NETHERITE_BLOCK:
-                if(tier == 4) { tier = 5; upgraded = true; }
-                break;
-            default: return false;
+//            case SPONGE -> {
+//                return false;
+//                if(tier == 1)
+//                    return false;
+//                tier--;
+//            }
+            case IRON_BLOCK -> {
+                if(tier != 1)
+                    return false;
+                tier = 2;
+            }
+            case GOLD_BLOCK -> {
+                if(tier != 2)
+                    return false;
+                tier = 3;
+            }
+            case DIAMOND_BLOCK -> {
+                if(tier != 3)
+                    return false;
+                tier = 4;
+            }
+            case NETHERITE_BLOCK -> {
+                if(tier != 4)
+                    return false;
+                tier = 5;
+            }
+            default -> {
+                return false;
+            }
         }
 
-        if(upgraded) {
-            item.setAmount(item.getAmount() - 1);
-            Database.FishBags.Update(Id, "tier", tier);
-            UpdateBagItem();
-            return true;
-        }
-        return false;
+        item.setAmount(item.getAmount() - 1);
+
+        Database.FishBags.Update(Id, "tier", tier);
+        UpdateBagItem();
+        return true;
     }
 
     public void Withdraw(Player player, FishType type, boolean large, boolean single, int page){
-        List<FishObject> filteredFishList = getFish().stream()
-                .filter(f -> Objects.equals(f.TypeId, type.Id))
-                .collect(Collectors.toList());
+        var filteredFishList = new ArrayList<>(getFish().stream().filter(f -> Objects.equals(f.TypeId, type.Id)).toList());
 
         if(!filteredFishList.isEmpty()){
             int freeSlots = Utilities.getFreeSlots(player.getInventory());
+
             if(single && freeSlots > 1) freeSlots = 1;
             else if(freeSlots > filteredFishList.size()) freeSlots = filteredFishList.size();
-            
-            if(large) Collections.reverse(filteredFishList);
+            if(large)  Collections.reverse(filteredFishList);
 
             for(int i = 0; i < freeSlots; i++){
                 FishObject fish = filteredFishList.get(i);
@@ -197,31 +226,38 @@ public class FishBag {
                 player.playSound(player.getLocation(), Sound.ENTITY_SALMON_FLOP, .5f, 1f);
             }
             UpdateBagItem();
+
             new FishBagPanel(this, page).Show(player);
         }
     }
 
+
     public ArrayList<String> GenerateLore() {
         double maxSize = getMax();
+
         ArrayList<String> lore = new ArrayList<>();
-        lore.add(Formatting.GetLanguageString("Equipment.Fish Bag.descSmall"));
+
+        lore.add(Formatting.GetLanguageString("Equipment.Fish Bag.descSmall")); //TODO: Change to dynamic based on size of bag
         lore.add("");
 
         double barScore = 0;
-        if(getAmount() != 0 && maxSize != 0){
-            barScore = 10.0 * (getAmount() / maxSize);
+
+        if(getAmount() != 0 || maxSize != 0){
+            barScore = 10 * (getAmount() / maxSize);
         }
+
 
         StringBuilder progressBar = new StringBuilder();
-        for (int i = 1; i <= (int)barScore; i++) {
-            progressBar.append(ChatColor.GREEN).append("|");
-        }
-        for (int i = 0; i < 10 - (int)Math.floor(barScore); i++) {
 
-            progressBar.append(ChatColor.WHITE).append("|");
+        for (int i = 1; i <= barScore; i++) {
+            progressBar.append(ChatColor.GREEN + "|");
+        }
+        for (int i = 0; i <  10 - Math.floor(barScore); i++) {
+            progressBar.append(ChatColor.WHITE + "|");
         }
 
-        lore.add(progressBar.toString() + " " + Formatting.toBigNumber(amount) + "/" + Formatting.toBigNumber(maxSize));
+        lore.add(progressBar + " " + Formatting.toBigNumber(amount) + "/" + Formatting.toBigNumber(maxSize));
+
         lore.add("");
         lore.add(Formatting.GetLanguageString("Equipment.Fish Bag.autoPickup"));
         lore.add(Formatting.GetLanguageString("Equipment.Fish Bag.depositAll"));
@@ -229,17 +265,20 @@ public class FishBag {
         lore.add(Formatting.GetLanguageString("Equipment.Fish Bag.openPanel"));
 
         if(amount >= getMax()){
-            Material material = upgradeMaterials.get(tier);
+            var material = upgradeMaterials.getOrDefault(tier, null);
             if(material != null){
                 lore.add("");
+
                 lore.add(Formatting.GetLanguageString("Equipment.Fish Bag.upgrade")
                         .replace("{item}", material.name()));
             }
         }
+
         return lore;
     }
 
     public int getMax(){
+        //return (10 * tier); //This is for testing purposes to be able to easily upgrade the bag
         return (int) (16 * Math.pow(8, tier)) * 2;
     }
 
@@ -261,40 +300,55 @@ public class FishBag {
     }
 
     public void RequestUpdate(){
-        fishList = Database.FishBags.GetAllFish(Id).stream()
-                .sorted(Comparator.comparingDouble(FishObject::getScore))
-                .collect(Collectors.toList());
+        fishList = Database.FishBags.GetAllFish(Id).stream().sorted(Comparator.comparingDouble(FishObject::getScore)).toList();
+
         amount = fishList.size();
+        //Bukkit.broadcastMessage("Updated Fish Bag. New Amount: " + amount);
     }
 
     public ItemStack GetItem() {
         ItemStack item = new ItemStack(ItemHandler.BagMat);
         ItemMeta itemMeta = item.getItemMeta();
-        if(itemMeta == null) return item;
+
+        assert itemMeta != null;
 
         itemMeta.getPersistentDataContainer().set(ItemHandler.FishBagId, PersistentDataType.INTEGER, Id);
-        itemMeta.setDisplayName(getBagName());
+        itemMeta.setDisplayName(Formatting.GetLanguageString("Equipment.Fish Bag.tier1Title"));
+
         itemMeta.setLore(GenerateLore());
+
         itemMeta.setCustomModelData(ItemHandler.BagModelData);
         itemMeta.addItemFlags(ItemFlag.HIDE_ENCHANTS);
+
+
         item.setItemMeta(itemMeta);
 
-        return item;
+        return  item;
     }
 
+
+
+
+    ///
+    //Static Methods
+    ///
     public static FishBag GetBag(int bagId){
         return Database.FishBags.Get(bagId);
     }
 
     private static final HashMap<Integer, FishBag> FishBags = new HashMap<>();
     public static FishBag GetBag(ItemStack bagItem){
-        if(!ItemHandler.hasTag(bagItem, ItemHandler.FishBagId)) return null;
+        if(!ItemHandler.hasTag(bagItem, ItemHandler.FishBagId))
+            return null;
 
         int bagId = ItemHandler.getTagInt(bagItem, ItemHandler.FishBagId);
-        if(FishBags.containsKey(bagId)) return FishBags.get(bagId);
-        if(!Database.FishBags.Exists(bagId)) return null;
+        if(FishBags.containsKey(bagId))
+            return FishBags.get(bagId);
 
-        FishBag bag = Database.FishBags.Get(bagId);
+        if(!Database.FishBags.Exists(bagId))
+            return null;
+
+        var bag = Database.FishBags.Get(bagId);
         FishBags.put(bagId, bag);
         bag.bagItem = bagItem;
         return bag;
@@ -304,10 +358,15 @@ public class FishBag {
         if(!ConfigHandler.instance.baseConfig.getEnableFishBags() || !player.getInventory().contains(ItemHandler.BagMat))
             return null;
 
-        for (ItemStack slot : player.getInventory().getContents()){
-            if(!IsBag(slot)) continue;
-            FishBag bag = GetBag(slot);
-            if(bag == null || !bag.Pickup || bag.isFull()) continue;
+        Inventory inv = player.getInventory();
+        for (var slot : inv){
+            if(!IsBag(slot))
+                continue;
+
+            var bag = GetBag(slot);
+            if(!bag.Pickup || bag.isFull())
+                continue;
+
             bag.bagItem = slot;
             return bag;
         }
@@ -315,21 +374,26 @@ public class FishBag {
     }
 
     public static boolean IsBag(ItemStack bag){
-        if(bag == null || !bag.hasItemMeta()) return false;
+
+        if(bag == null || !bag.hasItemMeta())
+            return false;
+
         return bag.getType() == ItemHandler.BagMat
                 && bag.getItemMeta().getPersistentDataContainer().has(ItemHandler.FishBagId, PersistentDataType.INTEGER);
     }
 
     public static ItemStack GetRecipeItem(){
         ItemStack bag = new ItemStack(ItemHandler.BagMat, 1);
-        ItemMeta m = bag.getItemMeta();
-        if(m == null) return bag;
 
-        m.getPersistentDataContainer().set(ItemHandler.FishBagId, PersistentDataType.INTEGER, -1);
+        ItemMeta m = bag.getItemMeta();
+        assert m != null;
+
+        PersistentDataContainer dataContainer = m.getPersistentDataContainer();
+        dataContainer.set(ItemHandler.FishBagId, PersistentDataType.INTEGER, -1);
         m.setDisplayName(Formatting.GetLanguageString("Equipment.Fish Bag.tier1Title"));
 
         List<String> lore = new ArrayList<>();
-        lore.add(Formatting.GetLanguageString("Equipment.Fish Bag.descSmall"));
+        lore.add(Formatting.GetLanguageString("Equipment.Fish Bag.descSmall")); //TODO: Change to dynamic based on size of bag
         lore.add("");
         lore.add(Formatting.GetLanguageString("Equipment.Fish Bag.autoPickup"));
         lore.add(Formatting.GetLanguageString("Equipment.Fish Bag.depositAll"));
@@ -337,10 +401,12 @@ public class FishBag {
         lore.add(Formatting.GetLanguageString("Equipment.Fish Bag.openPanel"));
 
         m.setLore(lore);
+
         m.setCustomModelData(ItemHandler.BagModelData);
         m.addItemFlags(ItemFlag.HIDE_ENCHANTS);
         bag.setItemMeta(m);
-        bag.addUnsafeEnchantment(Enchantment.UNBREAKING, 1);
+
+        bag.addUnsafeEnchantment(Enchantment.DURABILITY, 1);
 
         return bag;
     }
@@ -348,4 +414,5 @@ public class FishBag {
     public static Integer GetId(ItemStack bag){
         return ItemHandler.getTagInt(bag, ItemHandler.FishBagId);
     }
+
 }
